<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@drawable/backgroundgradient" >

    <TextView
        android:id="@+id/viewproductnametxt"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/userviewproductname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:layout_toEndOf="@+id/viewproductnametxt"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/viewproductcategoryname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="12sp"
        android:text="@string/product_category"
        android:textColor="#ffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userviewproductcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:textSize="12sp"
        android:layout_toEndOf="@+id/viewproductcategoryname"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/viewproductpricename"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:text="@string/product_price" />

    <TextView
        android:id="@+id/userviewproductprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/viewproductpricename"
        android:textSize="12sp"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/viewproductquantityname"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:text="@string/product_quantity" />

    <TextView
        android:id="@+id/userviewproductquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/viewproductquantityname"
        android:textSize="12sp"
        android:textColor="#ffff" />
</RelativeLayout>