<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.MainActivity"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="357dp"
        android:layout_height="347dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/inventory" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-106dp"
        android:fontFamily="@font/allura"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#C1F8B0B0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/AdminMain"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-55dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_person_login"
        android:hint="@string/admin"
        android:onClick="admin"
        android:textColorHint="#ffff"
        android:textSize="18dp" />

    <Button
        android:id="@+id/UserMain"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/AdminMain"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="-62dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_person_login"
        android:hint="@string/user"
        android:onClick="user"
        android:textColorHint="#FFFF"
        android:textSize="18dp" />
</RelativeLayout>