<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.MainActivity"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="252dp"
        android:layout_height="218dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/inventory" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-88dp"
        android:fontFamily="@font/allura"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#C1F8B0B0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailSignIn"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-65dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_account_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#ffff"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/emailSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#fff"
        android:textColorHint="#ffff"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-94dp"
        android:background="#172196F3"
        android:text="Login"
        android:textColor="#FFFF"
        android:textSize="20dp" />

    <ProgressBar
        android:id="@+id/progressbars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


</RelativeLayout>

